--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/projet1.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Gamja+Flower|Love+Ya+Like+A+Sister" rel="stylesheet">
 	</head>
-	<body style="background-image: url(asset/ARRIERE.png);"> 
+	<body style="background-image: url(asset/ARRIERE.jpg);"> 
 		<header>  
 			<span id="brand" class="center animated fadeInLeft"><picture><img class="brand" src="asset/logo.jpg"/></picture></span>
 		</header>
@@ -29,7 +29,7 @@
 					</div>
 				</div>
 	<br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer class="footer center">
 		<figure>
 	   		<img class="footer-img" src="asset/top header.png"/>
