modification et finalise le site ou presque

--- a/artvan.html
+++ b/artvan.html
@@ -1,71 +1,105 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF8"/>
+    	<meta charset="UTF8"/>
+    	<link href="css/sm-core-css.css" rel="stylesheet" type="text/css" />
+    	<link href="css/sm-clean/sm-clean.css" rel="stylesheet" type="text/css" />
 		<link rel="icon" type="image/png" href="asset/icon1.png" />
 		<title>Projet Street Art</title>
-		<link rel="stylesheet" type="text/css" href="css/art.css"/>.
-		<link rel="stylesheet" type="text/css" href="css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="css/art.css"/>
+		<link rel="stylesheet" type="text/css" href="css/coment.css"/>
+    	<script  src="js/tech.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Anton|Covered+By+Your+Grace|
-		Englebert|Gamja+Flower|Love+Ya+Like+A+Sister|Oregano|Princess+Sofia|Shadows+Into+Light" 
-		rel="stylesheet">
+		Englebert|Gamja+Flower|Love+Ya+Like+A+Sister|Oregano|Princess+Sofia|Shadows+Into+Light" rel="stylesheet">
+    	<link rel="stylesheet" href="css/icons-fonts.css" >	
+    	<link rel="stylesheet" href="css/bootstrap1.min.css"> 
+    	<link rel="stylesheet" type="text/css" href="css/header.css"/>
+   	 	<link rel="stylesheet" href="css/boot/css/bootstrap.css">		
+    	<link rel="stylesheet" href="css/style.css" >
 	</head>
-	<body class="imgback" style="background-image: url(asset/graf6.jpg);"> 
-		<picture><img class="brand" src="asset/logo1.jpg"/></picture><h1>Street Art</h1>	
-		<div>
-		<div class="header">
-			<div class="more">
-                <ul>   
-						<li><a href="index.html">Accueil</a></li>
-						<li><a href="tahiti.html">Tahiti</a></li>
-						<li><a href="metropole.html">Métropole</a></li>
-						<li><a href="tech.html">Techniques & Supports</a></li>
-						<li><a href="art.html">L'histoire</a></li>
-						<li><a href="coment.html">Contact</a></li>                                    
-                </ul>
-            </div>
-		</div>
-    </div>
-    <h2>Art ou vandalisme???</h2>
-
-	
-	<p>Le débat qui cherche à déterminer si le graffiti est un art ou un acte de vandalisme existe depuis toujours. Qui dit vrai et qui dit faux ? Bien que le graffiti ait gagné ses lettres de noblesses depuis fort longtemps 
-            déjà au coeur de certains milieux (dont le milieu artistique), certains réfractaires tendent à vouloir démontrer 
+	<body>
+      <header class="img-haut" >
+        <ul class="nav justify-content-center"style="font-size:30px;">
+          <li class="nav-item">
+            <a class="nav-link"  href="index.html">Accueil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="art.html">Histoire</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tahiti.html">Tahiti</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tech.html">Techniques</a>
+          </li>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="coment.html">Contacts</a>
+          </li>
+		</ul>
+		<h2><strong>Art ou vandalisme???</strong></h2>
+		</header><br><div class="row">
+				<div class="col-3"></div>
+				<div class="col-5"><img src="asset/vandalisme.jpg"/></div>
+				<div class="col-3"></div>
+			</div><br>
+		<p>	Le débat qui cherche à déterminer si le graffiti est un art ou un acte de vandalisme existe depuis toujours. Qui dit vrai et qui dit faux ? Bien que le graffiti ait gagné ses lettres de noblesses depuis fort longtemps 
+    		déjà au coeur de certains milieux (dont le milieu artistique), certains réfractaires tendent à vouloir démontrer 
             qu’il s’agit d’un acte illégal, 
-            d’un cancre pour la société et on le qualifie même de métastase (cellule cancéreuse) !</p>	
-	<br><br>
-	<section>
-		<header>
-		<h3>Contexte </h3>
-		</header>
-		<article><h3>Par ailleurs, certaines oeuvres réalisées par des artistes de calibre sont bien acceptées dans divers arrondissements et quartiers. 
-            Plusieurs d’entres elles sont colorées, joviales, sympathiques et ne se limitent pas qu’au simple tag qui peut parfois être gênant. 
-            Une panoplie d’artistes réalisent des fresques sous forme de murales, ce qui confère des airs d’unité, de respect et de créativité 
-            à certains quartiers. 
-            Bien sûr, il u a une différence majeure entre murale et tag.</h3></article>
-			  <br>
-		<article><h3>Pourtant, tout porte à croire que si réalisé dans un contexte légal, le graffiti est un excellent moyen 
-            de stimuler la créativité des jeunes et de les pousser à développer leurs talents, ce qui est somme toute très 
-            positif pour une agglomération. Du coup, ces jeunes ont davantage confiance en eux et perçoivent leur avenir 
-            d’un nouvel oeil. Les adolescents de quartiers défavorisés vivent parfois dans la pauvreté extrême. 
-            Dans la mesure où ceux-ci sont stimulés de façon adéquate, il peut parfois se produire des miracles!</h3></article>
-		<article><h3>article 3</h3></article>
-		<article><h3>article 4</h3></article>
-		</section>
-		
-		<aside>
-		<h3>Gallerie</h3>
-		<picture class="image"><img  src="asset/art1v.jpg"/>
-		<img  src="asset/artv2.jpg"/>
-		<img  src="asset/artv3.jpg"/></picture>
-		</aside>
-
-		<footer class="footer center">
-			<figure>
-				   <img class="footer-img" src="asset/top header.png"/>
-			</figure>
-		 </footer>
-
-
-	</body>
+			d’un cancre pour la société et on le qualifie même de métastase (cellule cancéreuse) !
+		</p><br>
+		<div class="row">
+				<div class="col-1"></div>
+				<div class="col-4"><img src="asset/vandalism.jpg"/></div>
+				<div class="col-2"></div>
+				<div class="col-4"><img src="asset/pochoir2.jpg"/></div>
+				<div class="col-1"></div>
+			</div><br>
+		<section>
+			<h3>Contexte</h3>
+			<article>
+				Par ailleurs, certaines oeuvres réalisées par des artistes de calibre sont bien acceptées dans divers arrondissements et quartiers. 
+            	Plusieurs d’entres elles sont colorées, joviales, sympathiques et ne se limitent pas qu’au simple tag qui peut parfois être gênant. 
+            	Une panoplie d’artistes réalisent des fresques sous forme de murales, ce qui confère des airs d’unité, de respect et de créativité 
+            	à certains quartiers. 
+				Bien sûr, il u a une différence majeure entre murale et tag.
+			</article>
+			<br>
+			<article>
+				Pourtant, tout porte à croire que si réalisé dans un contexte légal, le graffiti est un excellent moyen 
+            	de stimuler la créativité des jeunes et de les pousser à développer leurs talents, ce qui est somme toute très 
+           	 	positif pour une agglomération. Du coup, ces jeunes ont davantage confiance en eux et perçoivent leur avenir 
+            	d’un nouvel oeil. Les adolescents de quartiers défavorisés vivent parfois dans la pauvreté extrême. 
+				Dans la mesure où ceux-ci sont stimulés de façon adéquate, il peut parfois se produire des miracles!</h3>
+			</article>
+			<br>
+			<article>
+			Le graffiti donnerait, selon eux, un aspect visuel dépravé, abandonné et serait signe d’une mauvaise gestion de la 
+			part des autorités. De plus, laisser les artistes graffeurs performer où et comme bon leur semble serait signe de relâchement 
+			et de négligence, signifiant un manque d’intérêt envers ses propres concitoyens.Cela dit, il y a cependant les gens qui ne sont ni 
+			pour, ni contre. Ceux qui considèrent qu’en autorisant l’accès à des lieux spécifiques aux artistes graff ainsi qu’en leur 
+			permettant de réaliser leurs oeuvres de façon légale pensent fermement que ce genre de solution serait la clé de la civilité 
+			et du respect. En le rendant accessible, sans pour autant verser dans l’exagération, on banaliserait l’acte en quelques sortes, 
+			de façon à le rendre moins attrayant aux yeux des artistes qui sont incités par le besoin d’illégalité et de clandestinité.
+			<br><br>
+			Bien entendu, il y aura toujours des gens qui repousseront les limites et qui inventeront sans cesse des méthodes plus élaborées 
+			pour défier le système et la justice mais, en étant d’avantage ouvert et en apprenant à apprécier le caractère artistique du 
+			graffiti, les frictions seraient estompées et l’art pourrait devenir un loisir accessible à tous. Finalement, le but ultime est 
+			de faciliter la liberté d’expression et de favoriser la compréhension et ce, que l’on soit pour ou contre la question.
+			</article>
+	</section>
+	<section class="bas"><h2>Vous pouvez aussi naviguez sur ces liens!</h2>
+		<footer style="color: white;" class="footer center w-100">
+			  <div class='row'>
+				<div class="col-2"></div>
+					<div class="col-2"><a href="https://www.fatcap.com/graffiti-styles.html"><h2>fatcap</h2></a></div>
+				<div class="col-2"></div>
+					<div class="col-2"><a href=" http://en.wikipedia.org/wiki/Graffiti "><h2>Graffiti</h2></a></div>
+				<div class="col-2"></div>
+					<div class="col-2"><a href="  http://www.ekosystem.org/ "><h2>Tag</h2></a></div>
+			  </div>
+				  <img class="footer-img w-100" src="asset/top header.png"/>
+		</footer>
+	</section>
+</body>
 </html>
