--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css"/>
 		<link rel="stylesheet" type="text/css" href="css/animate.css"/>
 		<link rel="stylesheet" type="text/css" href="css/hover.css"/>
-		<link rel="icon" type="image/png" href="asset/icon.png" />
+		<link rel="icon" type="image/png" href="asset/icon1.png" />
 		<title>Projet Street Art</title>
 		<link rel="stylesheet" type="text/css" href="css/projet1.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Gamja+Flower|Love+Ya+Like+A+Sister" rel="stylesheet">
 	</head>
-	<body style="background-image: url(asset/ARRIERE.jpg);"> 
+	<body style="background-image: url(asset/ARRIERE.jpg); background-size: cover  ;"> 
 		<header>  
-			<span id="brand" class="center animated fadeInLeft"><picture><img class="brand" src="asset/logo.jpg"/></picture></span>
+			<span id="brand" class="center animated fadeInLeft">
+				<picture><img class="brand" src="asset/logo.jpg"/></picture>
+			</span>
+	<br><br><br><br><br>
 		</header>
 				<div>
 					<div class="header">
@@ -28,8 +31,8 @@
 						</div>
 					</div>
 				</div>
-	<br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer class="footer center">
 		<figure>
 	   		<img class="footer-img" src="asset/top header.png"/>
