--- a/art.html
+++ b/art.html
@@ -3,113 +3,110 @@
 	<head>
 		<meta charset="UTF8"/>
 		<link rel="icon" type="image/png" href="asset/icon1.png" />
-		<title>Projet Street Art</title>
-		<link rel="stylesheet" type="text/css" href="css/art.css"/>.
+		<title >Projet Street Art</title>
+		<link rel="stylesheet" type="text/css" href="css/art.css"/>
+		<script  src="js/tech.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/header.css"/>
+		<link rel="stylesheet" href="css/boot/css/bootstrap.css"> 
 		<link href="https://fonts.googleapis.com/css?family=Anton|Covered+By+Your+Grace|
 		Englebert|Gamja+Flower|Love+Ya+Like+A+Sister|Oregano|Princess+Sofia|Shadows+Into+Light" 
 		rel="stylesheet">
 	</head>
-	<body class="imgback" style="background-image: url(asset/graf6.jpg);"> 
-		<picture><img class="brand" src="asset/logo1.jpg"/></picture><h1>Street Art</h1>	
-		<div>
-		<div class="header">
-			<div class="more">
-                <ul>   
-						<li><a href="index.html">Retour</a></li>
-						<li><a href="tahiti.html">Tahiti</a></li>
-						<li><a href="metropole.html">Métropole</a></li>
-						<li><a href="tech.html">Techniques & Supports</a></li>
-						<li><a href="artvan.html">Art & Vandalisme</a></li>
-						<li><a href="coment.html">Contact</a></li>                                    
-                </ul>
-            </div>
-		</div>
-	</div>
-			<h2>Art urbain ou Art de rue</h2>
-
-	<h3>Une petite histoire...!!!</h3><br>
-	<p>Les œuvres d’arts enrichissent notre patrimoine et se trouvent communément sous forme d’exposition 
+	<body>
+	<header class="img-haut" >
+		<ul class="nav justify-content-center"style="font-size:30px;">
+			<li class="nav-item">
+			  <a class="nav-link"  href="index.html">Accueil</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="tech.html">Techniques</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="tahiti.html">Tahiti</a>
+			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="coment.html">Contacts</a>
+			</li>
+			</li>
+			<li class="nav-item">
+		 		 <a class="nav-link" href="artvan.html">Art & Vandalisme</a>
+			</li>
+		</ul>
+		<h2>Qu'est-ce que le <strong>Street Art</strong></h2>
+	</header>
+	<section>
+		<h3>Une petite histoire...!!!</h3>
+		<p>Les œuvres d’arts enrichissent notre patrimoine et se trouvent communément sous forme d’exposition 
 		dans les musées et galeries. Quand est-il pour les autres formes d’arts? La rue offre aux passants 
 		et aux publics des graphismes souvent éphémères qui naissent puis disparaissent au fil du temps. 
 		De nos jours, la société reste partagée sur le sujet des graffitis, certains considèrent ces inscriptions 
-		comme un acte de vandalisme et d’autres comme une œuvre picturale a part entière. </p>	
-	<br><br>
+		comme un acte de vandalisme et d’autres comme une œuvre picturale à part entière. </p>	
+	</section>
+	<div class="row">
+		<div class="col-3"></div>
+		<div class="col-6"><img src="asset/fille.jpg"/></div>
+		<div class="col-3"></div>
+	</div>
+	<section><h3>Définition</h3>	
+		Le Street art est un art strictement visuel développé dans les espaces publics 
+		(ou en d'autres mots, « dans les rues »). Le terme fait référence habituellement à l'art non-autorisé, 
+		non-conforme aux initiatives sponsorisées par un gouvernement. Le terme peut inclure des illustrations 
+		graffiti traditionnelles, des sculptures, des graffitis au pochoir, le sticker art (autocollants), 
+		le street poster art (art de l'affiche), les projections vidéo et le guerilla art. Typiquement, 
+		le terme Street art ou plus spécifiquement post-graffiti est utilisé pour distinguer 
+		l'art public contemporain du graffiti territorial le « tag » , du vandalisme ou de l'art corporatif. <br><br>	
+		<h4>Aux Etats-Unis</h4> <br>
+		Le Street Art remonte aux temps anciens. A Pompéi, de nombreuses illustrations sur pierre ont été retrouvées, ainsi qu’à 
+		l’Agora d’Athènes et dans la Vallée des rois en Egypte. En effet,  ces inscriptions étaient présentes dans 
+		le monde cela peut-être des messages politiques, religieux, sexuels ou  personnels...
+		C'est tout d’abord, à Philadelphie en Pensylvannie qu'apparaissent les premiers « writers », sous les 
+		pseudonymes de Cornbread  et Cool Earl, en écrivant leurs noms partout dans la ville et gagnant donc très vite 
+		l'attention de la communauté et de la presse locales. En même temps, le graffiti prend de l’ampleur dans les 
+		quartiers pauvres de New-York et de ses banlieues plutôt négligées et se développe peu à peu. 
+		L’apparition d'artistes précurseurs issus des quartiers mal famés de New-York tel «  Taki 183 », 
+		« Tracy 168» ou «Stay High 149 » taguant sur les murs attire l’attention de la population. 
+		L'exemple de Taki 183 est sans doute le meilleur et le plus fameux lorsque l'on parle des 
+		writers new-yorkais : le jeune grec nommé Demetrius découvre avec son ami Greg pendant l'été 1969, 
+		alors qu'ils s'ennuyaient, un jeune garçon écrivant son nom et le numéro de sa rue : JULIO 204. 
+		Ils trouvèrent tous deux l'idée cool et commencèrent comme cela à parsemer leurs noms dans toute la ville. 
+		Demetrius use de son surnom « Taki » et du numéro de sa rue pour imposer sa marque. Ainsi débute la légende.
+	</section>  
 	<section>
-		<header>
-		<h3>Contexte historique</h3>
-		</header>
-	<h4>En quoi le Street art s’intègre t-il dans notre société ?</h4>
-Afin de mieux comprendre le retentissement de l’art urbain sur notre société, nous commencerons par définir 
-les origines du Street art. Dans une deuxième partie nous étudierons le Street art comme un nouveau moyen d’expression. 
-Pour finir, nous nous pencherons  sur l’impact de cette forme d’art sur le vécu urbain.<br>
-		<article><h4>a.Etats-Unis</h4> 
-				Le Street Art n’est pas un mouvement nouveau comme nous pourrions être amené à le croire, au contraire il 
-				remonte aux temps anciens. A Pompéi, de nombreuses illustrations sur pierre ont été retrouvées, ainsi qu’à 
-				l’Agora d’Athènes et dans la Vallée des rois en Egypte. En effet,  ces inscriptions étaient présentes dans 
-				le monde entier et parfois prenaient une valeur historique significative, transmettant des messages politiques, 
-				religieux, sexuels ou  personnels. 
-				C'est tout d’abord, à Philadelphie en Pensylvannie qu'apparaissent les premiers « writers », sous les 
-				pseudonymes de Cornbread  et Cool Earl, en écrivant leurs noms partout dans la ville et gagnant donc très vite 
-				l'attention de la communauté et de la presse locales. En même temps, le graffiti prend de l’ampleur dans les quartiers pauvres de New-York et de ses banlieues plutôt négligées et se développe peu à peu. L’apparition d'artistes précurseurs issus des quartiers mal famés de New-York tel «  Taki 183 »,  « Tracy 168» ou «Stay High 149 » taguant sur les murs attire l’attention de la population. L'exemple de Taki 183 est sans doute le meilleur et le plus fameux lorsque l'on parle des writers new-yorkais : le jeune grec nommé Demetrius découvre avec son ami Greg pendant l'été 1969,  alors qu'ils s'ennuyaient, un jeune garçon écrivant son nom et le numéro de sa rue : JULIO 204. Ils trouvèrent tous deux l'idée cool et commencèrent comme cela à parsemer leurs noms dans toute la ville. 
-				Demetrius use de son surnom « Taki » et du numéro de sa rue pour imposer sa marque. Ainsi débute la légende.  </article>
-				<br>
-		<article>
-			Le mot « graffiti » représente avant tout une forme d'expression extrêmement ancienne qui consiste à 
-			apposer sa marque, sa signature, son siglet sur un mur et en marquer ainsi les murs ou plutôt l'espace urbain 
-			afin de communiquer à l'aide des mots ou des images. Non officiel par son non-conformisme, cet art est considéré 
-			d'abord comme bâtard. En effet, le photographe et essayiste Brassaï qualifie déjà en 1933 les 
-			graffitis « d'art bâtard des rues mal famées ». La particularité de cet art est qu'il se déploie dans l'espace public,
-			 s'affiche au grand jour et est donc accessible à tous. Le sujet du graffiti est vaste et varié, cependant on en oublie souvent de préciser quel est-il vraiment. Le graffiti tel qu'on le connait aujourd'hui est né dans les années 1960 au coeur de New-York principalement comme on l'a vu au-dessus et se divise déjà avant même qu'on puisse parler de Street Art. Il se caractérise par des formes relativement définies où la créativité individuelle s’exprime dans un cadre codé et 
-			impliquant l’adhésion à toute une culture : vocabulaire, lieux, préoccupations, goûts musicaux, etc</article><br>
-		<article><h3>a. Etymologie</h3> C'est un mot masculin, pluriel: graffitis ou graffiti venant du mot italien
-			« sgraffito » ou « sgraffite » qui signifie «coup de griffe, égratignure», mais surtout «stylet». 
-			Le « sgraffito » ou « sgraffite » est aussi une technique de décoration des façades consistant à 
-			appliquer plusieurs couches d'enduits successive, puis à gratter la couche supérieur encore humide 
-			pour faire apparaître des lignes et des formes. Ce mot vient aussi du mot latin « graphium » 
-			voulant dire «poinçon à écrire», et est aussi emprunté au grec « grapheion » se rattachant au verbe 
-			« graphein », écrire. L’idée d’écrire avec un poinçon, par extension avec un objet agressif ou agressivement 
-			contre une surface (un mur), est donc présente dans le terme. 
-			Ce mot apparaît au milieu du XIXe siècle en même temps que l'on découvre les fresque de Pompéï.</article>
-		<article>L'expression « Street Art » est relativement récente et désigne une forme d'expression culturelle 
-			finalement extrêmement ancienne qui est celle d'apposer sa marque sur un mur. Après les fameux graffitis 
-			new-yorkais des années 70, les galeries se sont peu à peu ouvertes à l'art du graffiti et ont tenté de faire 
-			oublier ses origines quelque peu douteuses en inventant le concept de « post-graffiti ». L'évolution du 
-			graffiti a donc connu peu à peu une véritable  renaissance artistique à travers cette explosion de créativité 
-			et de nouvelles idées qu'on appelle aussi et surtout le Street art qu'exposent des artistes de monde entier 
-			dans les rues. A la fin des années 80 alors que les murs de Paris étaient saturés de graffitis et tags en 
-			tout genre, de nombreux graffeurs ont voulu se différencier, sortir de la masse, s'évader du trow-up new-yorkais. La nouvelle génération d'artistes encore inspirée des graffitis new-yorkais renouvelle néanmoins l'art de la rue et le fait foisonner de toutes les façons. Le grand précurseur de cet art urbain Gérard Zlotykamien mène l'art vers la rue avec ses éphémères, dessins furtifs représentants d'étranges silhouettes rendant hommage à la disparition. L'artiste écrit en parlant de son travail «  ouvrir quelque part quelque chose sur l'expression, la liberté ». L'art de rue est donc libre, il n'y a pas de ligne de conduite, pas d'unité si ce n'est celle de la rue. Les murs se mêlent de techniques les plus variées. Certaines comme le pochoir ou l'affiche qui existe pourtant depuis des siècles renaissent et d'autres comme le sticker émergent. 
-				Le graffiti reste et continue de prospérer. Cependant, le street-artiste n'a plus les mêmes buts même si 
-				l'essence reste la même c'est-à-dire le refus du système. On voit donc de nouvelles motivations apparaître. 
-				Le Street Art avec ses nouvelles techniques et motivations transforme les rues de la ville en de véritables 
-				musées à ciel ouvert accessible et gratuit à tous. 
-				</article>
-				Il est évident que l'art urbain cherche à s'intégrer dans la société. Cependant de nombreuses barrières bloquent 
-				le bon déroulement de cet art. On considère que ce qui se trouve dans les musées et dans les galeries définit 
-				ce qu’est l'art, en tant que ce qui s'y expose en est la plus belle expression, ces établissements sont donc 
-				existentiels mais sélectifs. Ce raisonnement exclut alors la possibilité d'un art en dehors de quatre murs. 
-				De plus, le fait que les inscriptions urbaines soit réprimées par les autorités judiciaires et politiques 
-				ralentit le processus d'intégration. Nos interviews auprès de Palois montrent que selon l'âge du témoin, 
-				l'avis change énormément. Les personnes âgées, surtout les femmes pensent que les graffitis ne s'intègrent 
-				pas du tout de par leur illégalité. Les jeunes (collégiens et lycéens) pensent au contraire que l'art urbain 
-				risque de devenir une forme d'art à part entière dans les années à venir. Nous pouvons donc conclure que 
-				l'intégration du Street Art à commencé, depuis déjà plusieurs années, 
-				et qu'elle va continuer à s'accroitre avec une nouvelle génération de français bien moins marginale.
-		</section>
-		
-		
-		<h3>Gallerie</h3>
-		<picture class="image"><img  src="asset/art1.jpg"/>
-		<img  src="asset/art2.jpg"/>
-		<img  src="asset/art3.jpg"/></picture>
-	
-
-		<footer class="footer center">
-			<figure>
-				   <img class="footer-img" src="asset/top header.png"/>
-			</figure>
-		 </footer>
-
-
+		<h3>Quelques images</h3>
+			<div class="row">
+				<div class="col-1"></div>
+				<div class="col-2">
+					<img  src="asset/art1.jpg" width="400px" height="200px"/>
+					<img  src="asset/art2.jpg" width="400px" height="200px"/>
+					<img  src="asset/art3.jpg" width="400px" height="200px"/>
+				</div>
+				<div class="col-1"></div>
+				<div class="col-2">
+					<img  src="asset/art5.jpg" width="400px" height="200px"/>
+					<img  src="asset/art6.jpg" width="400px" height="200px"/>
+					<img  src="asset/art0.jpg" width="400px" height="200px"/>
+				</div>
+				<div class="col-1"></div>
+				<div class="col-2">
+					<img  src="asset/art4.jpg" width="400px" height="200px"/>
+					<img  src="asset/art8.jpg" width="400px" height="200px"/>
+					<img  src="asset/art.jpg"  width="400px"  height="200px"/>
+				</div>
+				<div class="col-2"></div>
+			</div>
+	</section>
+	<section class="bas"><h2>Vous pouvez aussi naviguez sur ces liens!</h2>
+		<footer style="color: white;" class="footer center w-100">
+			<div class='row'>
+				<div class="col-2"></div>
+				<div class="col-2"><a href="https://www.fatcap.com/graffiti-styles.html"><h2>fatcap</h2></a></div>
+				<div class="col-2"></div>
+				<div class="col-2"><a href=" http://en.wikipedia.org/wiki/Graffiti "><h2>Graffiti</h2></a></div>
+				<div class="col-2"></div>
+				<div class="col-2"><a href="  http://www.ekosystem.org/ "><h2>Tag</h2></a></div>
+			</div>
+			<img class="footer-img w-100" src="asset/top header.png"/>
+		</footer>
+	</section>
 	</body>
 </html>
