--- a/tahiti.html
+++ b/tahiti.html
@@ -34,74 +34,57 @@
 			</li>
 		</ul>
 		<h2>Le <strong>Street Art</strong> à <strong>T a h i t i</strong></h2>
-	</header>
-	<section>
-        <div id="slider">
-            <figure>
-                <img src="asset/tahiti.jpg" alt>
-                <img src="asset/art6.jpg" alt>
-                <img src="asset/visage1.jpg" alt>
-                <img src="asset/visage3.jpg" alt>
-                <img src="asset/ONOU.jpg" alt>
-                <img src="asset/art11.jpg" alt>
-                <img src="asset/art12.jpg" alt>
-            </figure>
+    </header><br><br>
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-10"><img src="asset/bandeau.png"/></div>
+            <div class="col-1"></div>
         </div>
-	</section>
-	<div class="row">
-		<div class="col-3"></div>
-		<div class="col-6"><img src="asset/fille.jpg"/></div>
-		<div class="col-3"></div>
-	</div>
-	<section><h3>Définition</h3>	
-		Le Street art est un art strictement visuel développé dans les espaces publics 
-		(ou en d'autres mots, « dans les rues »). Le terme fait référence habituellement à l'art non-autorisé, 
-		non-conforme aux initiatives sponsorisées par un gouvernement. Le terme peut inclure des illustrations 
-		graffiti traditionnelles, des sculptures, des graffitis au pochoir, le sticker art (autocollants), 
-		le street poster art (art de l'affiche), les projections vidéo et le guerilla art. Typiquement, 
-		le terme Street art ou plus spécifiquement post-graffiti est utilisé pour distinguer 
-		l'art public contemporain du graffiti territorial le « tag » , du vandalisme ou de l'art corporatif. <br><br>	
-		<h4>Aux Etats-Unis</h4> <br>
-		Le Street Art remonte aux temps anciens. A Pompéi, de nombreuses illustrations sur pierre ont été retrouvées, ainsi qu’à 
-		l’Agora d’Athènes et dans la Vallée des rois en Egypte. En effet,  ces inscriptions étaient présentes dans 
-		le monde cela peut-être des messages politiques, religieux, sexuels ou  personnels...
-		C'est tout d’abord, à Philadelphie en Pensylvannie qu'apparaissent les premiers « writers », sous les 
-		pseudonymes de Cornbread  et Cool Earl, en écrivant leurs noms partout dans la ville et gagnant donc très vite 
-		l'attention de la communauté et de la presse locales. En même temps, le graffiti prend de l’ampleur dans les 
-		quartiers pauvres de New-York et de ses banlieues plutôt négligées et se développe peu à peu. 
-		L’apparition d'artistes précurseurs issus des quartiers mal famés de New-York tel «  Taki 183 », 
-		« Tracy 168» ou «Stay High 149 » taguant sur les murs attire l’attention de la population. 
-		L'exemple de Taki 183 est sans doute le meilleur et le plus fameux lorsque l'on parle des 
-		writers new-yorkais : le jeune grec nommé Demetrius découvre avec son ami Greg pendant l'été 1969, 
-		alors qu'ils s'ennuyaient, un jeune garçon écrivant son nom et le numéro de sa rue : JULIO 204. 
-		Ils trouvèrent tous deux l'idée cool et commencèrent comme cela à parsemer leurs noms dans toute la ville. 
-		Demetrius use de son surnom « Taki » et du numéro de sa rue pour imposer sa marque. Ainsi débute la légende.
-	</section>  
+   	<section><h3><strong>ONO'U</strong></h3>	<br>
+        La Polynésie française est surtout réputée pour son environnement naturel (plages, cocotiers, etc.). 
+        Même si celui-ci est exceptionnel, il ne doit pas faire oublier beaucoup d’autres particularités remarquables 
+        de ce pays. Les polynésiens eux même, leur longue histoire et leur culture ancestrale méritent un intérêt 
+        particulier sur lequel je reviendrais plus en détail dans de prochains articles. <br>  
+        Le mot « Ono’u » en tahitien signifie littéralement « la rencontre des couleurs » et il faut reconnaitre que le 
+        terme a été bien choisit lorsqu’on constate le résultat sur les murs concernés. Ce concours permet ainsi de 
+        donner une nouvelle jeunesse à des façades dégradées par le temps, dans un style urbain et contemporain. 
+        Le festival Ono’u représente aussi une belle opportunité pour les artistes locaux de se faire connaitre 
+        à l’international.<br> <br>Ono'u présent sur le Fenua<br><br>
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-10"><img src="asset/onouaff.jpg"/></div>
+                <div class="col-1"></div>
+            </div>	
+		<h4>Artistes du<strong> monde entier</strong></h4> <br>
+        En effet, depuis 2014, durant une semaine environ, des artistes du monde entier viennent se confronter à 
+        l’aide de leurs bombes de peinture et de leur talent pour remporter le prix du meilleur graffeur de l’année. 
+        L’Ono’u festival a pour but d’embellir les vieilles façades en leur donnant une nouvelle vie, grâce aux talents 
+        d’artistes peintres, appelés graffeurs. Ainsi, après une courte période où tous les regards se tournent 
+        vers les graffeurs à l’œuvre, une sorte de « chasse au trésor » commence pour essayer de trouver les 
+        façades où ont fleuri des fresques. 
+        <br>
+        Il faut savoir que ce festival n’accueille plus seulement des graffeurs, mais aussi des sculpteurs et d’autres 
+        artistes. Le festival prend de plus en plus d’ampleur au fil des années. Il y a même un musée, qui a 
+        récemment ouvert ses portes, où l’on retrouve des photos des œuvres, les sculptures réalisées durant 
+        les différents festivals, ainsi que des textiles qui ont étés intégrés au concours récemment.
+    </section>  
+  
 	<section>
+        <h3>Vous pouvez consulter le musée du Street Art en Polynésie 
+            <a href="https://www.afar.com/places/museum-of-street-art-tahiti-papeete">
+                ici
+            </a>
+        </h3><br>
 		<h3>Quelques images</h3>
-			<div class="row">
-				<div class="col-1"></div>
-				<div class="col-2">
-					<img  src="asset/art1.jpg" width="400px" height="200px"/>
-					<img  src="asset/art2.jpg" width="400px" height="200px"/>
-					<img  src="asset/art3.jpg" width="400px" height="200px"/>
-				</div>
-				<div class="col-1"></div>
-				<div class="col-2">
-					<img  src="asset/art5.jpg" width="400px" height="200px"/>
-					<img  src="asset/art6.jpg" width="400px" height="200px"/>
-					<img  src="asset/art0.jpg" width="400px" height="200px"/>
-				</div>
-				<div class="col-1"></div>
-				<div class="col-2">
-					<img  src="asset/art4.jpg" width="400px" height="200px"/>
-					<img  src="asset/art8.jpg" width="400px" height="200px"/>
-					<img  src="asset/art.jpg"  width="400px"  height="200px"/>
-				</div>
-				<div class="col-2"></div>
-			</div>
+        <div id="slider">
+                <figure>
+                    <img src="asset/tahiti.jpg" >
+                    <img src="asset/visage1.jpg">
+                    <img src="asset/visage3.jpg">
+                </figure>
+            </div>
 	</section>
-	<section class="bas"><h2>Vous pouvez aussi naviguez sur ces liens!</h2>
+	<section class="bas"><h2>Vous pouvez aussi naviguez sur ces liens!</h2><br>
 		<footer style="color: white;" class="footer center w-100">
 			<div class='row'>
 				<div class="col-2"></div>
