--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 							<ul class="menu" style="background-image: url(asset/color.jpg) ;"/>
 							  <li><a href="art.html">Histoire</a></li>
 							  <li><a href="tahitis.html">Tahiti</a></li>
-							  <li><a href="metropole.html">Métropole</a></li>
-							  <li><a href="tech.html">Techniques & Supports</a></li>
+							  <li><a href="tech.html">Techniques</a></li>
 							  <li><a href="artvan.html">Art & Vandalisme</a></li>
 							  <li><a href="coment.html">Contacts</a></li>
 							</ul>
