--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div>
 							<ul class="menu" style="background-image: url(asset/color.jpg) ;"/>
 							  <li><a href="art.html">Histoire</a></li>
-							  <li><a href="tahitis.html">Tahiti</a></li>
+							  <li><a href="tahiti.html">Tahiti</a></li>
 							  <li><a href="tech.html">Techniques</a></li>
 							  <li><a href="artvan.html">Art & Vandalisme</a></li>
 							  <li><a href="coment.html">Contacts</a></li>
