--- a/tahiti.html
+++ b/tahiti.html
@@ -37,7 +37,7 @@
     </header><br><br>
         <div class="row">
             <div class="col-1"></div>
-            <div class="col-10"><img src="asset/bandeau.png"/></div>
+            <div class="col-10 text-center"><img src="asset/bandeau.png"/></div>
             <div class="col-1"></div>
         </div>
    	<section><h3><strong>ONO'U</strong></h3>	<br>
