--- a/tahiti.html
+++ b/tahiti.html
@@ -35,9 +35,9 @@
 		</ul>
 		<h2>Le <strong>Street Art</strong> à <strong>T a h i t i</strong></h2>
     </header><br><br>
-        <div class="row">
+        <div class="row text-center">
             <div class="col-1"></div>
-            <div class="col-10 text-center"><img src="asset/bandeau.png"/></div>
+            <div class="col-10 "><img src="asset/bandeau.png"/></div>
             <div class="col-1"></div>
         </div>
    	<section><h3><strong>ONO'U</strong></h3>	<br>
