--- a/tahiti.html
+++ b/tahiti.html
@@ -50,7 +50,7 @@
         donner une nouvelle jeunesse à des façades dégradées par le temps, dans un style urbain et contemporain. 
         Le festival Ono’u représente aussi une belle opportunité pour les artistes locaux de se faire connaitre 
         à l’international.<br> <br>Ono'u présent sur le Fenua<br><br>
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-1"></div>
                 <div class="col-10"><img src="asset/onouaff.jpg"/></div>
                 <div class="col-1"></div>
@@ -76,7 +76,7 @@
             </a>
         </h3><br>
 		<h3>Quelques images</h3>
-        <div id="slider">
+        <div id="slider text-center">
                 <figure>
                     <img src="asset/tahiti.jpg" >
                     <img src="asset/visage1.jpg">
