--- a/tahiti.html
+++ b/tahiti.html
@@ -76,7 +76,7 @@
             </a>
         </h3><br>
 		<h3>Quelques images</h3>
-        <div id="slider text-center">
+        <div id="slider">
                 <figure>
                     <img src="asset/tahiti.jpg" >
                     <img src="asset/visage1.jpg">
